added visual changes to index page

--- a/Client/index.html
+++ b/Client/index.html
@@ -24,11 +24,11 @@
                     <a class="navbar-brand" href="#">
                         <img alt="Azure Functions Tug of War" id="logoTop" src="functions-logo.png">
                     </a>                    
-                    <a class="navbar-brand">Azure Functions Tug of War</a>
+                    <a class="navbar-brand">Azure Serverless Tug of Fun</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://github.com/joescars/TugOfWar-FunctionsDemo">Repo</a>
+                        <a href="https://github.com/sadranyi/TugOfFun-AzureServerlessDemo">Repo</a>
                     </li>
                 </ul>
             </div>
@@ -41,7 +41,7 @@
             <div class="col-md-8">
             <!-- start form -->
                 <div class="panel panel-primary">
-                    <div class="panel-heading">Welcome to the Tug of War game demo powered by Azure Functions.</div>
+                    <div class="panel-heading">Welcome to the Tug of Fun game demo powered by Azure Serverless Services.</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-6">
@@ -87,8 +87,8 @@
                         <!-- start inner display -->
                         <div class="row">
                         <div class="col-md-2 text-center" id="team1Info">                            
-                            <div class="teamNameDisplay" id="team1Display">Team 1</div>
-                            <button class="btn btn-lg btn-primary" id="team1">0</button>
+                            <div class="teamNameDisplay" id="team1Display">Ducks <span id="team1badge" class="badge badge-secondary">0</span></div>
+                            <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button>
                         </div>
                         <div class="col-md-8">   
                             <div id="gameArea">
@@ -96,8 +96,8 @@
                             </div>      
                         </div>
                         <div class="col-md-2 text-center" id="team2Info">
-                            <div class="teamNameDisplay" id="team2Display">Team 2</div>
-                            <button class="btn btn-lg btn-primary" id="team2">0</button>
+                            <div class="teamNameDisplay" id="team2Display">Beavers <span id="team2badge" class="badge badge-secondary">0</span></div>
+                            <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button>
                         </div> 
                         </div>
                         <!-- end inner display -->
