added credits and GitHub repo address

--- a/Client/index.html
+++ b/Client/index.html
@@ -114,8 +114,9 @@
             <hr>
 
             <footer>
-                <a href="https://github.com/joescars/TugOfWar-FunctionsDemo">GitHub Repo</a> |
-                follow me <a href="https://twitter.com/joescars">@joescars</a>
+                <a href="https://github.com/sadranyi/TugOfFun-AzureServerlessDemo">GitHub Repo</a> |
+                follow me <a href="https://twitter.com/sadranyi">@sadranyi</a> |
+                Credits to <a href="https://twitter.com/joescars">@joescars</a> for the <a href="https://github.com/joescars/TugOfWar-FunctionsDemo">original project</a> 
             </footer>            
         </div>
 
