Changed scores to show in badge instead of button

--- a/Client/index.html
+++ b/Client/index.html
@@ -92,7 +92,7 @@
                         </div>
                         <div class="col-md-8">   
                             <div id="gameArea">
-                                <img id="logo" src="functions-logo.png">     
+                                <img id="ball" src="ball.png">     
                             </div>      
                         </div>
                         <div class="col-md-2 text-center" id="team2Info">
