added new element for scores

--- a/Client/index.html
+++ b/Client/index.html
@@ -87,7 +87,8 @@
                         <!-- start inner display -->
                         <div class="row">
                         <div class="col-md-2 text-center" id="team1Info">                            
-                            <div class="teamNameDisplay" id="team1Display">Ducks <span id="team1badge" class="badge badge-secondary">0</span></div>
+                            <div class="teamNameDisplay" id="team1Display">Ducks</div>
+                            <p><span id="team1badge" class="badge badge-secondary">0</span></p>
                             <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button>
                         </div>
                         <div class="col-md-8">   
