change UI elements for play.html

--- a/Client/play.html
+++ b/Client/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Azure Functions Tug of War - Let's Play!</title>
+        <title>Azure Serverless Services Tug of Fun - Let's Play!</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="jumbotron">
-                    <h1>Azure Functions<br/> Tug of War</h1>
+                    <h1>Azure Serverless Services (Functions)<br/> Tug of Fun</h1>
                     <p>Choose a team and click away!</p>
                 </div>                
             </div>
