--- a/Client/index.html
+++ b/Client/index.html
@@ -87,7 +87,10 @@
                         <!-- start inner display -->
                         <div class="row">
                         <div class="col-md-2 text-center" id="team1Info">                            
-                            <div class="teamNameDisplay" id="team1Display"><span id="team1Displaytext">Ducks</span> <span id="team1badge" class="badge badge-secondary">0</span> </div>
+                            <div class="teamNameDisplay" id="team1Display">
+                                <span id="team1Displaytext">Ducks</span> 
+                                <span id="team1badge" class="badge badge-secondary">0</span> 
+                            </div>
                             <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button>
                         </div>
                         <div class="col-md-8">   
@@ -96,7 +99,10 @@
                             </div>      
                         </div>
                         <div class="col-md-2 text-center" id="team2Info">
-                            <div class="teamNameDisplay" id="team2Display"><span id="team2Displaytext">Beavers</span><span id="team2badge" class="badge badge-secondary">0</span></div>
+                            <div class="teamNameDisplay" id="team2Display">
+                                <span id="team2Displaytext">Beavers</span> 
+                                <span id="team2badge" class="badge badge-secondary">0</span>
+                            </div>
                             <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button>
                         </div> 
                         </div>
