added team logo styles

--- a/Client/index.html
+++ b/Client/index.html
@@ -92,6 +92,7 @@
                                 <span id="team1badge" class="badge badge-secondary">0</span> 
                             </div>
                             <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button>
+                            <img id="team1logo" src="ducks.png"> 
                         </div>
                         <div class="col-md-8">   
                             <div id="gameArea">
@@ -104,6 +105,7 @@
                                 <span id="team2badge" class="badge badge-secondary">0</span>
                             </div>
                             <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button>
+                            <img id="team2logo" src="beavers.png"> 
                         </div> 
                         </div>
                         <!-- end inner display -->
