replaced team buttons with logos

--- a/Client/index.html
+++ b/Client/index.html
@@ -91,7 +91,7 @@
                                 <span id="team1Displaytext">Ducks</span> 
                                 <span id="team1badge" class="badge badge-secondary">0</span> 
                             </div>
-                            <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button>
+                            <!-- <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button> -->
                             <img id="team1logo" src="ducks.png"> 
                         </div>
                         <div class="col-md-8">   
@@ -104,7 +104,7 @@
                                 <span id="team2Displaytext">Beavers</span> 
                                 <span id="team2badge" class="badge badge-secondary">0</span>
                             </div>
-                            <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button>
+                            <!-- <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button> -->
                             <img id="team2logo" src="beavers.png"> 
                         </div> 
                         </div>
