modified logo style

--- a/Client/index.html
+++ b/Client/index.html
@@ -92,6 +92,9 @@
                                 <span id="team1badge" class="badge badge-secondary">0</span> 
                             </div>
                             <!-- <button class="btn btn-lg btn-primary" id="team1"><span class="badge badge-light">0</span></button> -->
+                            <div id="logoContainer">
+                                <img id="team2logo" src="beavers.png"> 
+                            </div>
                             <img id="team1logo" src="ducks.png"> 
                         </div>
                         <div class="col-md-8">   
@@ -105,7 +108,10 @@
                                 <span id="team2badge" class="badge badge-secondary">0</span>
                             </div>
                             <!-- <button class="btn btn-lg btn-primary" id="team2"><span class="badge badge-light">0</span></button> -->
-                            <img id="team2logo" src="beavers.png"> 
+                            <div id="logoContainer">
+                                <img id="team2logo" src="beavers.png"> 
+                            </div>
+                            
                         </div> 
                         </div>
                         <!-- end inner display -->
